--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<title>1024px v2.0 Alternative</title>
+<title>JZ0815's tech space</title>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" type="text/css" href="1024px.css" title="Just Coding" media="screen,projection" />
 </head>
@@ -15,7 +15,7 @@
   <div id="contentalt">
     <h2>As simple as it gets...</h2>
     <img src="images/example.jpg" width="280" height="144" alt="Example frontpage image" class="left photo" />
-    <p>Welcome to <strong><span class="blue">1024</span><span class="gray">px</span></strong>, a free website template by Andreas Viklund. This is a regular XHTML/CSS template which you can use to build your own website. This template is released as open source web design, which means that you are free to use it for any purpose and in any way you may want to without any obligations or limitations. I kindly ask that you leave the credit text and link (the one that says "Design by Andreas Viklund" in the footer) since that would be a nice way of supporting my work. But the decision is yours, and that freedom is the beauty with open source design...</p>
+    <p>Welcome to <strong><span class="blue">Just Coding</span><span class="gray"> with Jie</span></strong>, a free website template by Andreas Viklund. This is a regular XHTML/CSS template which you can use to build your own website. This template is released as open source web design, which means that you are free to use it for any purpose and in any way you may want to without any obligations or limitations. I kindly ask that you leave the credit text and link (the one that says "Design by Andreas Viklund" in the footer) since that would be a nice way of supporting my work. But the decision is yours, and that freedom is the beauty with open source design...</p>
     <h2>Blog/CMS theme versions</h2>
     <p>Are you planning to use this template with a CMS? Have you checked if someone has ported it already? If not, make sure to check out the ports and themes page on my site to see if there are any version available for your favorite content management system. If you are looking for a WordPress version, you will find it on my wordpress themes page. If it is not available for your CMS and you make a port yourself, please let me know about it so I can your version to the list.</p>
     <p class="readmore"><a href="#">Example "Read more" link</a> &raquo;</p>
